--- a/androidAppPractice/weatherMapApp/app/src/main/res/values/strings.xml
+++ b/androidAppPractice/weatherMapApp/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My First App</string>
-    <string name="edit_message">Enter a message</string>
-    <string name="button_send">Send</string>
+    <string name="app_name">Weather!</string>
+    <string name="edit_message">Enter a city:</string>
+    <string name="button_send">Submit</string>
 </resources>
