--- a/androidAppPractice/weatherMapApp/app/src/main/res/values/strings.xml
+++ b/androidAppPractice/weatherMapApp/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Weather!</string>
     <string name="edit_message">Enter a city:</string>
-    <string name="button_send">Submit</string>
+    <string name="button_send">Search by city name</string>
+    <string name="location_send">Search by GPS location</string>
 </resources>
